[workspace]
resolver = "2"
package.edition = "2021"
package.rust-version = "1.76.0"
members = [
    "crates/cubedaw",
    "crates/cubedaw-lib",
    "crates/cubedaw-worker",
    "crates/cubedaw-command",
    "crates/cubedaw-pluginlib",
    "crates/cubedaw-plugin",
    "crates/cubedaw-default-plugins",
]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.clippy]
# TODO uncomment this when i have time for this
# pedantic = { level = "warn", priority = -1 }
needless_question_mark = "allow" # makes code harder to read in long question mark chains
unusual_byte_groupings = "allow" # misunderstands floating-point binary representation

[workspace.dependencies]
egui = "0.28.1"
log = "0.4.22"
ahash = "0.8.11"
smallvec = "1.13.2"
bytemuck = "1.15.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
replace_with = "0.1.7"
bumpalo = "3.16.0"
work-queue = "0.1.4"
# TODO meminterval works but it's missing some features (like iterating over an entire IntervalTree).
# however there doesn't seem to be a viable alternative for a low-dependency mutable interval tree already on crates.io
# possibly contribute back to meminterval if they're fine with it or fork it?
meminterval = "0.4.1"
