[workspace]
resolver = "3"
package.edition = "2024"
package.rust-version = "1.85.0"
members = [
    "crates/cubedaw",
    "crates/cubedaw-lib",
    "crates/cubedaw-worker",
    "crates/cubedaw-wasm",
    "crates/cubedaw-command",
    "crates/cubedaw-plugin",
    "crates/resourcekey",
    "xtask",
]


[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.clippy]
# TODO uncomment this when i have time for this
# pedantic = { level = "warn", priority = -1 }
needless_question_mark = "allow" # makes code harder to read in long question mark chains
unusual_byte_groupings = "allow" # misunderstands floating-point binary representation

[workspace.dependencies]
egui = "0.29.1"
log = "0.4.22"
anyhow = "1.0.89"
ahash = "0.8.11"
smallvec = "1.13.2"
bytemuck = "1.15.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
replace_with = "0.1.7"
bumpalo = "3.16.0"
work-queue = "0.1.4"
semver = "1.0.23"
ascii = "1.1.0"
serde = "1.0.210"
# TODO meminterval works but it's missing some features (like iterating over an entire IntervalTree).
# however there doesn't seem to be a viable alternative for a low-dependency mutable interval tree already on crates.io
# possibly contribute back to meminterval if they're fine with it or fork it?
meminterval = "0.4.1"

unwrap_todo = "0.1.2"
