[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition = "2021"
name = "cubedaw"
rust-version = "1.71.1"
version = "0.1.0"

[dependencies]
ciborium = "0.2.1"
cubedaw_lib = {path = "../cubedaw_lib"}
eframe = "0.23.0"
egui = "0.23.0"
egui_dock = "0.8.2"
log = "0.4"
serde = {version = "1.0.190", features = ["derive"]}

[[bin]]
name = "app"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4"

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
