[workspace]
resolver = "2"
package.edition = "2021"
package.rust-version = "1.76.0"
members = [
    "cubedaw-test-plugin",
    "cubedaw-default-nodes",
    "cubedaw-pluginlib",
    "postcard-stringify",
]

[patch.crates-io]
proc-macro2 = { path = "proc-macro2-1.0.92" }

[profile.release]
strip = true
opt-level = 3

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"
