[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw-command"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
cubedaw-lib = { path = "../cubedaw-lib" }
cubedaw-node = { path = "../cubedaw-node" }

[features]
"egui" = ["cubedaw-lib/egui", "cubedaw-node/egui"]
