[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw-lib"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
ahash = { workspace = true }
smallvec = { workspace = true }
egui = { workspace = true, optional = true }
meminterval = { workspace = true }
bytemuck = { workspace = true }

[features]
egui = ["dep:egui"]

[lints]
workspace = true
