[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw-node"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
egui = { workspace = true, optional = true }
cubedaw-lib = { path = "../cubedaw-lib" }

[features]
egui = ["dep:egui", "cubedaw-lib/egui"]
