[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw-plugin"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
cubedaw-wasm = { path = "../cubedaw-wasm", default-features = false, features = [
    "v128",
    "wasmparser",
    "wasm-encoder",
] }
resourcekey = { path = "../resourcekey", features = ["serde"] }
ahash = { workspace = true }
smallvec = { workspace = true }
log = { workspace = true }
postcard = "1.0.10"
serde = { workspace = true }
wasmparser = "0.215.0"
wasm-encoder = { version = "0.215.0", features = ["wasmparser"] }
anyhow = { workspace = true }
semver = { workspace = true }
unwrap_todo = { workspace = true }

[dev-dependencies]
cubedaw-wasm = { path = "../cubedaw-wasm", features = ["v128"] }
bytemuck = { workspace = true, features = ["must_cast"] }

[features]
v128 = ["cubedaw-wasm/v128"]

[lints]
workspace = true
