[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw-plugin"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
wasmparser = { version = "0.231.0", default-features = false, features = [
    "component-model",
] }
cubedaw-wasm = { path = "../cubedaw-wasm", default-features = false, features = [
    "v128",
    "wasmparser",
    "wasm-encoder",
] }
resourcekey = { path = "../resourcekey", features = ["serde"] }
ahash = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
postcard = "1.1.1"
serde = { workspace = true }
wasm-encoder = { version = "0.231.0", features = ["wasmparser"] }
anyhow = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
cubedaw-wasm = { path = "../cubedaw-wasm", features = ["v128"] }
bytemuck = { workspace = true, features = ["must_cast"] }

[features]
v128 = ["cubedaw-wasm/v128"]

[lints]
workspace = true
