[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw-worker"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
ahash = { workspace = true }
smallvec = { workspace = true }
cubedaw-lib = { path = "../cubedaw-lib" }
cubedaw-command = { path = "../cubedaw-command" }
cubedaw-workerlib = { path = "../cubedaw-workerlib" }
egui = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }
replace_with = { workspace = true }
log = { workspace = true }

[features]
egui = ["dep:egui"]

[lints]
workspace = true
