[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw-worker"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
egui = { workspace = true, optional = true }
ahash = { workspace = true }
smallvec = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
cubedaw-lib = { path = "../cubedaw-lib" }
resourcekey = { path = "../resourcekey" }
cubedaw-command = { path = "../cubedaw-command" }
cubedaw-plugin = { path = "../cubedaw-plugin" }
cubedaw-wasm = { path = "../cubedaw-wasm" }
crossbeam-channel = { workspace = true }
replace_with = { workspace = true }
log = { workspace = true }
bumpalo = { workspace = true }
work-queue = { workspace = true }
unwrap_todo = { workspace = true }

[features]

[lints]
workspace = true
