[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw-workerlib"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
ahash = { workspace = true }
smallvec = { workspace = true }
cubedaw-lib = { path = "../cubedaw-lib" }
cubedaw-node = { path = "../cubedaw-node" }
crossbeam = { workspace = true }
bytemuck = { workspace = true }
egui = { workspace = true, optional = true }

[features]
egui = ["dep:egui", "cubedaw-lib/egui"]
