[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw_worker"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
ahash = { workspace = true }
smallvec = { workspace = true }
cubedaw-lib = { path = "../cubedaw-lib" }
crossbeam = { workspace = true }
bytemuck = { workspace = true }
egui = { workspace = true, optional = true }
replace_with = { workspace = true }
bumpalo = { workspace = true }

[features]
egui = ["dep:egui", "cubedaw-lib/egui"]

[lints]
workspace = true
