[package]
name = "cubedaw"
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
version = "0.1.0"

[dependencies]
cubedaw-command = { path = "../cubedaw-command" }
egui = { workspace = true }
anyhow = { workspace = true }
eframe = "0.29.1"
egui_dock = "0.14.0"
env_logger = "0.11.3"
cubedaw-lib = { path = "../cubedaw-lib" }
cubedaw-worker = { path = "../cubedaw-worker" }
resourcekey = { path = "../resourcekey" }
ahash = { workspace = true }
smallvec = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
unwrap_todo = { workspace = true }

[lints]
workspace = true
