[package]
name = "cubedaw"
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
version = "0.1.0"
default-run = "cubedaw"

[dependencies]
cubedaw-command = { path = "../cubedaw-command" }
egui = { workspace = true }
anyhow = { workspace = true }
eframe = "0.29.1"
egui_dock = "0.14.0"
env_logger = "0.11.3"
cubedaw-lib = { path = "../cubedaw-lib" }
cubedaw-worker = { path = "../cubedaw-worker" }
cubedaw-plugin = { path = "../cubedaw-plugin" }
resourcekey = { path = "../resourcekey" }
crossbeam-channel = { workspace = true }
replace_with = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
bytemuck = { workspace = true }
zerocopy = { workspace = true }
log = { workspace = true }
unwrap_todo = { workspace = true }
bitflags = "2.6.0"

cpal = "0.15.3"

[lints]
workspace = true
