[package]
name = "cubedaw"
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
version = "0.1.0"
default-run = "cubedaw"

[dependencies]
egui = { workspace = true }
anyhow = { workspace = true }
eframe = "0.31.0"
egui_dock = "0.16.0"
cubedaw-lib = { path = "../cubedaw-lib" }
cubedaw-worker = { path = "../cubedaw-worker" }
cubedaw-plugin = { path = "../cubedaw-plugin" }
resourcekey = { path = "../resourcekey" }
crossbeam-channel = { workspace = true }
replace_with = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
bytemuck = { workspace = true }
zerocopy = { workspace = true }
tracing = { workspace = true }
bitflags = "2.8.0"

cpal = "0.15.3"
tracing-subscriber = "0.3.19"

[lints]
workspace = true
