[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "resourcekey"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
ascii = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true, optional = true }
const-fnv1a-hash = "1.1.0"

[features]
serde = ["dep:serde"]

[lints]
workspace = true
