[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "resourcekey"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
ascii = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true, optional = true }
ctor = "0.4.2"
libc = "0.2.172"

[features]
serde = ["dep:serde"]

[lints]
workspace = true
