[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw-default-plugins"
rust-version.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cubedaw-pluginlib = { path = "../cubedaw-pluginlib", features = ["inline"] }

[lints]
workspace = true
