[package]
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
name = "cubedaw-test-plugin"
rust-version.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = 3

[dependencies]
cubedaw-pluginlib = { path = "../cubedaw-pluginlib", features = ["inline"] }

[lints]
workspace = true
